Welcome screen, Help menu, and SMS sendig functionality

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,15 +19,32 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
+        
         <activity
             android:name="com.codefupanda.app.swish.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+ 		<activity
+            android:name="com.codefupanda.app.swish.SettingsActivity"
+            android:label="@string/action_settings" >
+        </activity>
+        
+ 		<activity
+            android:name="com.codefupanda.app.swish.WelcomeActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:label="@string/action_settings">
+        </activity>
+
+ 		<activity
+            android:name="com.codefupanda.app.swish.HelpActivity"
+            android:label="@string/action_help">
+        </activity>
+
         <receiver android:name="com.codefupanda.app.swish.alarmmanager.AlarmManagerBroadcastReceiver" >
         </receiver>
     </application>
